--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: pink;
+    background: #b0c4de;
     font-family:Arial, Helvetica, sans-serif;
 }
 
@@ -7,15 +7,33 @@ body {
     display:flex;
     padding: 10px;
     margin :10px;
-    background:lightgray;
+    background:#9bccb6;
+    border-radius:5px;
 }
 
 .assignment img{
     width: 200px;
     padding: 10px;
+    border: 4px solid #fff;
+}
+
+.assignment img:hover {
+    border: 4px dashed #f25c69;
 }
 
 h1 {
-    color:darkorchid;
+    color:#5d7f71;
     text-align:center;
+}
+h1:hover {
+    color:#f25c69;
+}
+
+a {
+    text-decoration:none;
+    color:#fff;
+}
+
+a:hover {
+    color:#f25c69;
 }
