--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,16 @@ body {
     font-family:Arial, Helvetica, sans-serif;
 }
 
-.assignment {
+.assignments {
     display:flex;
+    flex-wrap:wrap;
+}
+
+.assignment {
+    width: 22%;
     padding: 10px;
     margin :10px;
+    padding: 20% 10;
     background:#9bccb6;
     border-radius:5px;
 }
@@ -15,6 +21,8 @@ body {
     width: 200px;
     padding: 10px;
     border: 4px solid #fff;
+    display:block;
+    margin: auto;
 }
 
 .assignment img:hover {
@@ -27,6 +35,9 @@ h1 {
 }
 h1:hover {
     color:#f25c69;
+}
+h2 {
+    text-align: center;
 }
 
 a {
